[package]
name = "casing-json"
version = "0.1.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
edition = "2021"
license = "Apache-2x.0"

[lib]
crate-type = ['cdylib']

[dependencies]
convert_case = "0.8.0"
fluvio-smartmodule = "0.8.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"


[profile.release-lto]
inherits = "release"
lto = true
strip = "symbols"
