[package]
name = "csv-json-array"
version = "0.2.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ['cdylib']

[dependencies]
fluvio-smartmodule = "0.8.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3.0"
heck = "0.4.1"


[profile.release-lto]
inherits = "release"
lto = true
strip = "symbols"
