[package]
name = "parquet-json-records"
version = "0.1.0"
authors = ["A.J. <aj@infinyon.com>"]
edition = "2021"

[lib]
crate-type = ['cdylib']

[dependencies]
fluvio-smartmodule = "0.8.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4.3"
parquet = "53.3.0"
chrono = "0.4.39"
bytes = "1.9.0"


[profile.release-lto]
inherits = "release"
lto = true
strip = "symbols"
