[package]
name = "rss-json"
version = "0.2.0"
authors = ["InfinyOn Team <team@infinyon.com>"]
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ['cdylib']

[dependencies]
fluvio-smartmodule = "0.8.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rss = { version = "2.0", features = ["serde"] }


[profile.release-lto]
inherits = "release"
lto = true
strip = "symbols"
