[package]
name = "solana-balance-calculator"
version = "0.0.0"
published = false
authors = ["Fluvio Contributors <team@fluvio.io>"]
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ['cdylib']

[dependencies]
fluvio-smartmodule = "0.8.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-transaction-status-client-types = "=2.1.7"


[profile.release-lto]
inherits = "release"
lto = true
strip = "symbols"
